# IonBridge

./: .gitignore  CMakeLists.txt  GrafanaDashboard.json  LICENSE  README.md  component_requires.cmake  esp32c3-4mdevboard.csv  gdbinit  partitions.csv  pyproject.toml  requirements.txt  sdkconfig.defaults  sdkconfig.develop  sdkconfig.fake  version.json
HummingBoard/: BOM_HummingBoard_LC.ver.xlsx  Bill of Materials-PCB.csv  CNC Plate.step  jason的电源壳.stp  盖子.stp  补充.stp
components/acdc/: CMakeLists.txt  Kconfig.projbuild  acdc.cpp
components/acdc/include/: acdc.h
components/animation/: CMakeLists.txt  animation.cpp
components/animation/include/: animation.h
components/app/: CMakeLists.txt  app.cpp  machine_info.cpp
components/app/include/: app.h  machine_info.h
components/ble/: CMakeLists.txt  Kconfig.projbuild  ble.cpp  idf_component.yml  message.cpp  protocol.cpp
components/ble/include/: ble.h  ble_callbacks.h  message.h  protocol.h
components/chip_data_types/include/: data_types.h  fake_sw3566_data_types.h  fpga_data_types.h  sw3566_data_types.h
components/chip_data_types/include/internal/: sw3566_command_types.h
components/controller/: CMakeLists.txt  Kconfig.projbuild  controller.cpp
components/controller/include/: controller.h
components/display/: CMakeLists.txt  Kconfig.projbuild  animation_manager.cpp  display_animation.cpp  display_manager.cpp  idf_component.yml
components/display/include/: animation_manager.h  display_animation.h  display_manager.h  display_types.h
components/firmware/: CMakeLists.txt  Kconfig.projbuild  download.cpp  firmware.cpp  https_ota.cpp  upgrade.cpp
components/firmware/include/: download.h  firmware.h  https_ota.h  upgrade.h
components/fpga/: CMakeLists.txt  fpga.cpp
components/fpga/include/: fpga.h
components/handler/: CMakeLists.txt  ble_handler.cpp  device_handler.cpp  display_handler.cpp  handler.cpp  ota_handler.cpp  power_handler.cpp  telemetry_stream_handler.cpp  wifi_handler.cpp
components/handler/include/: ble_handler.h  device_handler.h  display_handler.h  handler.h  ota_handler.h  power_handler.h  telemetry_stream_handler.h  wifi_handler.h
components/logging/: CMakeLists.txt  Kconfig.projbuild  logging.cpp  syslog.cpp
components/logging/include/: logging.h  syslog.h
components/machine_info/: CMakeLists.txt  machine_info.cpp
components/machine_info/include/: machine_info.h
components/mqtt_app/: CMakeLists.txt  Kconfig.projbuild  mqtt_app.cpp
components/mqtt_app/include/: mqtt_app.h  mqtt_message.h
components/mqtt_message/: CMakeLists.txt  mqtt_message.cpp
components/mqtt_message/include/: mqtt_message.h
components/nvs_data/: CMakeLists.txt  Kconfig.projbuild  nvs_base.cpp  nvs_default.cpp  nvs_namespace.cpp  nvs_partition.cpp
components/nvs_data/include/: nvs_base.h  nvs_default.h  nvs_namespace.h  nvs_partition.h
components/port/: CMakeLists.txt  Kconfig.projbuild  port.cpp  port_manager.cpp  port_stage.cpp  port_state.cpp
components/port/include/: port.h  port_data.h  port_manager.h  port_state.h  ring_buffer.h
components/power/: CMakeLists.txt  Kconfig.projbuild  power_allocator.cpp  power_config.cpp  strategy.cpp
components/power/include/: power_allocator.h  power_config.h  strategy.h
components/rpc/: CMakeLists.txt  display.cpp  fakechip.cpp  fakefpga.cpp  fpga.cpp  mcu.cpp  rpc.cpp  sw3566.cpp
components/rpc/include/: rpc.h
components/service/: CMakeLists.txt  service.cpp
components/service/include/: service.h
components/storage/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  storage.cpp
components/storage/include/: storage.h
components/task/: CMakeLists.txt  Kconfig.projbuild  telemetry_task.cpp  telemetry_timer.cpp
components/task/include/: telemetry_task.h  telemetry_timer.h
components/uart/: CMakeLists.txt  Kconfig.projbuild  task_map.cpp  uart.cpp
components/uart/include/: task_map.h  uart.h
components/utils/: CMakeLists.txt  utils.cpp
components/utils/include/: utils.h
components/version/: CMakeLists.txt  version.cpp
components/version/include/: version.h
components/web_server/: CMakeLists.txt  idf_component.yml  server.cpp
components/web_server/include/: server.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild  wifi.cpp  wifi_manager.cpp  wifi_state.cpp  wifi_storage.cpp
components/wifi/include/: wifi.h  wifi_manager.h  wifi_state.h  wifi_storage.h
configs/: sdkconfig.develop  sdkconfig.fake
docs/: Bluetooth Communication Protocol.md  MQTT Communication Protocol.md
include/: data_types.h  ionbridge.h  singleton.h
main/: Kconfig.projbuild  main.cpp
mqtt_server/: docker-compose.yml  emqx.conf
partitions/: release-partitions.csv
python/: ble_tester.py  mqtt_client.py  mqtt_subscribe.py  server.py  ufcs_decode.py  utils.py
python/data_types/: port.py  service.py  strategy.py  wifi.py
