file(GLOB SRCS_FILES *.cpp)
idf_component_register(
  SRCS
  ${SRCS_FILES}
  INCLUDE_DIRS
  "include"
  REQUIRES
  app
  service
  PRIV_REQUIRES
  ble
  chip_data_types
  controller
  display
  efuse
  esp_http_client
  esp_timer
  esp_wifi
  firmware
  logging
  machine_info
  nvs_data
  port
  power
  rpc
  task
  utils
  wifi)
